--- a/doc/旋转数组.md
+++ b/doc/旋转数组.md
@@ -45,4 +45,4 @@ public static int[] rotateArray(int[] arr, int shift) {
 	return arr;
 }
 ```
-无限循环发的核心思想是：可以将整体看成一个周期循环的数组,`k` 可以认为只是对这个周期函数作了一个平移.需要分配的空间是 `O(2n)` 即两倍数组长度,时间复杂度为 `O(2nn)`即两次循环;其中第一次循环的目的只是单纯赋值.
+无限循环发的核心思想是：可以将整体看成一个周期循环的数组,`k` 可以认为只是对这个周期函数作了一个平移.需要分配的空间是 `O(2n)` 即两倍数组长度,时间复杂度为 `O(2n)`即两次循环;其中第一次循环的目的只是单纯赋值.
